# pipeworks-image-generator

./: .env.example  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  ADAPTERS_PLAN.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  DELIMITER_INVESTIGATION.md  MANIFEST.in  NEXT_STEPS.md  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  codecov.yml  gradio_analysis_report.md  pyproject.toml  pytest.ini  release-please-config.json  requirements.txt  test_delimiter_compat.py
.github/workflows/: ci.yml  release-please.yml
deploy/env/: image-generator.env.example
deploy/nginx/: images.pipeworks.luminal.local
deploy/systemd/: pipeworks-image-generator.service
docs/: MODEL_ADAPTERS.md
docs/source/: character_conditions.rst  conf.py  index.rst  installation.rst  model_adapters.md  quickstart.rst
docs/source/api/: core.rst  ui.rst
examples/inputs/: README.md  art_style.txt  art_style_00.txt  art_style_01p.txt  art_style_01s.txt
examples/inputs/00_mud_assets/books/: fishing_books.txt
examples/inputs/00_mud_assets/buildings/hamlet/: build_hamlet.txt
examples/inputs/00_mud_assets/clothing/fishing/: fishing_belts.txt  gloves.txt  patched_hats.txt
examples/inputs/00_mud_assets/equipment/gob_fish_equip/: goblin_fishing_poles.txt  goblin_fishing_reels.txt  goblin_fishing_shack_items.txt
examples/inputs/00_mud_assets/equipment/gob_fish_equip/containers/: gob_tac_bx_cursed_ABSOLUTELY_not.txt  gob_tac_bx_cursed_common.txt  gob_tac_bx_cursed_cursed.txt  gob_tac_bx_cursed_illegal.txt  gob_tac_bx_cursed_rare.txt  gob_tac_bx_cursed_uncommon.txt
examples/inputs/00_mud_assets/equipment/gob_fish_equip/hooks/: goblin_hook_common.txt  goblin_hook_forbidden_sets.txt  goblin_hook_illegal_sets.txt  goblin_hook_rare_sets.txt  goblin_hook_uncommon_sets.txt
examples/inputs/00_mud_assets/equipment/gob_fish_equip/lures/: goblin_lure_common.txt  goblin_lure_forbidden_sets.txt  goblin_lure_illegal_sets.txt  goblin_lure_rare_sets.txt  goblin_lure_uncommon_sets.txt
examples/inputs/00_mud_assets/wildlife/fish/: goblin_fish_species_absolutely_not.txt  goblin_fish_species_common.txt  goblin_fish_species_cursed.txt  goblin_fish_species_rare.txt  goblin_fish_species_talking.txt  goblin_fish_species_uncommon.txt
examples/inputs/01_styles/: z_comic_book_p.txt  z_comic_book_s.txt  z_digital_art_styles_PNS.txt  z_digital_art_styles_p.txt  z_digital_art_styles_s.txt  z_photo_styles_p.txt  z_photo_styles_s.txt  z_tv_styles_p.txt  z_tv_styles_s.txt
examples/inputs/occupations/: fantasy_occupations.txt
scripts/: fix-image-generator-share.sh
src/pipeworks/: __init__.py
src/pipeworks/api/: __init__.py  gallery_store.py  main.py  models.py  models_lora.py  mud_api_client.py  prompt_builder.py  runtime_mode.py
src/pipeworks/api/routers/: gallery.py  generation.py  gpu_worker.py  lora_dataset.py  prompt.py  runtime.py
src/pipeworks/api/services/: deprecations.py  generation_runtime.py  gpu_workers.py  http_transport.py  lora_run_store.py  lora_tile_packs.py  prompt_catalog.py  prompt_resolution.py  runtime_policy.py  zip_metadata.py
src/pipeworks/core/: __init__.py  config.py  favorites_db.py  model_adapters.py  model_manager.py  pipeline.py  prompt_builder.py  prompt_token_counter.py
src/pipeworks/core/adapters/: qwen_image_edit.py  zimage_turbo.py
src/pipeworks/plugins/: __init__.py  save_metadata.py
src/pipeworks/static/css/: app.css  output-lightbox.css
src/pipeworks/static/data/: append.json  lora_body_actions.json  lora_character_sheet.json  lora_character_view_profiles.json  lora_facial_expressions.json  main.json  models.json  prepend.json  prompts.json
src/pipeworks/static/js/: app.js  gallery-context.mjs  gallery-navigation.mjs  output-lightbox.mjs
src/pipeworks/static/js/app/: api-client.mjs  dom-utils.mjs  gallery-manager.mjs  generation-flow.mjs  lora-dataset.mjs  lora-tile-lightbox.mjs  prompt-composer.mjs  runtime-gpu-controller.mjs  state.mjs
src/pipeworks/templates/: index.html
src/pipeworks/ui/: __init__.py  adapters.py  app.py  components.py  handlers.py  models.py  state.py  validation.py
src/pipeworks/ui/handlers/: __init__.py  gallery.py  generation.py  prompt.py  tokenizer.py
src/pipeworks/workflows/: __init__.py  base.py
tests/: conftest.py
tests/frontend/: test_output_lightbox_navigation.mjs
tests/integration/: test_api.py  test_components.py  test_lora_dataset.py  test_prompt_builder.py  test_text_order_delimiter.py
tests/unit/: test_adapters.py  test_api_main_cli.py  test_api_models.py  test_api_zip.py  test_config.py  test_formatting.py  test_frontend_app_js.py  test_frontend_template.py  test_gallery_handlers.py  test_gallery_store.py  test_handler_delimiters.py  test_model_adapters.py  test_model_manager.py  test_models.py  test_mud_api_client.py  test_prompt_builder.py  test_prompt_catalog.py  test_prompt_handlers.py  test_prompt_token_counter.py  test_runtime_mode.py  test_state.py  test_validation.py
